# soroban-analyzer

./: Cargo.toml  README.md
analysis/: Cargo.toml
analysis/src/: lib.rs  macros.rs
analysis/src/output/: dump.rs
soroban-analyzer/: Cargo.toml
soroban-analyzer/src/: blocks.rs  loops.rs  macros.rs  main.rs  metric.rs  state.rs  tree.rs  types.rs
test_input/: foo.rs  foo1.rs  lib.rs
