[package]
name = "rust-code-analysis"
version = "0.0.24"
authors = ["Calixte Denizet <cdenizet@mozilla.com>"]
edition = "2021"
repository = "https://github.com/mozilla/rust-code-analysis"
documentation = "https://docs.rs/rust-code-analysis/"
readme = "README.md"
keywords = ["metrics"]
description = "Tool to compute and export code metrics"
license = "MPL-2.0"

[dependencies]
aho-corasick = { workspace = true }
crossbeam = { workspace = true, features = ["crossbeam-channel"] }
fxhash = { workspace = true }
globset = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
num = { workspace = true }
num-derive = { workspace = true }
num-format = { workspace = true }
num-traits = { workspace = true }
petgraph = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
termcolor = { workspace = true }
walkdir = { workspace = true }

tree-sitter = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-preproc = { path = "./tree-sitter-preproc", version = "=0.20.0" }
tree-sitter-ccomment = { path = "./tree-sitter-ccomment", version = "=0.20.0" }
tree-sitter-mozcpp = { path = "./tree-sitter-mozcpp", version = "=0.20.1" }
tree-sitter-mozjs = { path = "./tree-sitter-mozjs", version = "=0.20.0" }

[dev-dependencies]
insta = { version = "1.22.0", features = ["yaml"] }
pretty_assertions = "^1.3"
