[package]
name = "soroban-analyzer"
version = "0.0.24"
authors = ["Tommaso De Ponti <tommaso@xycloo.com>"]
edition = "2021"
description = "Analyze gas inefficiencies in Soroban rust code"
license = "MPL-2.0"

[[bin]]
name = "soroban-analyzer"

[dependencies]
clap = { version = "^4.0", features = ["derive"] }
globset = "^0.4"
regex = "^1.7"
rust-code-analysis = { path = "../analysis" }
serde = "^1.0"
serde_cbor = "^0.11"
serde_json = "^1.0"
serde_yaml = "^0.9"
toml = "^0.5"
tree-sitter = "=0.20.9"
tree-sitter-rust = "=0.20.3"
termcolor = "^1.1"
