[package]
name = "soroban-analyzer"
version = "0.0.24"
authors = ["Tommaso De Ponti <tommaso@xycloo.com>"]
edition = "2021"
description = "Analyze gas inefficiencies in Soroban rust code"
license = "MPL-2.0"

[[bin]]
name = "soroban-analyzer"

[dependencies]
clap = { workspace = true, features = ["derive"] }
rust-code-analysis = { workspace = true }
tree-sitter = { workspace = true }
termcolor = { workspace = true }
walkdir = { workspace = true }